[package]
name = "deferred_shading"
version = "0.1.0"
authors = ["JHorace <jasumihiro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
forge_engine = {git = "https://github.com/JHorace/ForgeEngine", branch = "main"}
camera = {git = "https://github.com/JHorace/RustCamera", branch = "main"}
winit = "0.24.0"
cgmath = "0.18.0"